[package]
name = "grace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#git2 = "0.15.0"
clap = "4.0.29"
crossterm = "0.25.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0"